# ax-mediapipe

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  main.cpp
cmake/: import_3rdparty.cmake
conan_profile/: ax620
docs/: compile.md
include/: PedDetect.h  graph.h  named_object.h  node.h  node_factory.h  node_type.h  packet.h  port.h  stream.h  utils.h
src/: graph.cpp  node.cpp  node_factory.cpp  port.cpp  stream.cpp  utils.cpp
